initial refactoring (utente), swagger.js
