# routes/utente.js
@@ -1,12 +1,13 @@
 const express = require('express');
+
 const router = express.Router();
 const utenteController = require('../controllers/utente');
 const tokenChecker = require('../middleware/tokenChecker');
 
 // API di un utente anonimo
-router.post('/utente/registrazione', utenteController.registrazione);
-
 router.post('/utente/login', utenteController.login);
+
+router.post('/utente/registrazione', utenteController.registrazione);
 
 router.put('/utente/recupero-password', utenteController.recupero_password);
 
@@ -16,9 +17,10 @@ router.get('/utente/ricerche-salvate', tokenChecker, utenteController.get_ricerc
 router.get('/utente/annunci-salvati', tokenChecker, utenteController.get_annunci_salvati);
 
 //API di un utente autenticato
-router.delete('/utente/:id', tokenChecker, utenteController.cancella_account);
 
 router.patch('/utente/:id', tokenChecker, utenteController.modifica_profilo);
+
+router.delete('/utente/:id', tokenChecker, utenteController.cancella_account);
 
 router.get('/utente/annunci-pubblicati', tokenChecker, utenteController.get_annunci_pubblicati);
 
